--- a/src/layout.css
+++ b/src/layout.css
@@ -60,10 +60,20 @@
     width: 100%;
   }
   
-  .AccountInput_display {
+  .AccountInput_actions {
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 30px;
+    margin-top: 20px;
+  }
+
+  .AccountInput_clearBtn {
+    display: flex;
     align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    padding: 4px 12px;
   }
   
   /* 4. BankButtonList (은행 리스트) */
